# dig-gamba-bot

./: Cargo.toml  LICENSE
assets/images/items/: broken_tool.aseprite  diamond.aseprite  garbage.aseprite  metal_scraps.aseprite  missing_texture.aseprite  old_coin.aseprite  ruby.aseprite
assets/images/logo/: logo.aseprite
src/: data.rs  handler.rs  main.rs
src/commands/: balance.rs  channel_based_enum.rs  create.rs  dig.rs  help.rs  inventory.rs  mod.rs
src/commands/dev/: drop_table.rs  mod.rs
src/commands/dig/: mod.rs
src/commands/digging/: dig.rs  drop_pool.rs  mod.rs
src/commands/economy/: bal_top.rs  balance.rs  baltop.rs  mod.rs
src/commands/gambling/: coin_flip.rs  mod.rs
src/commands/games/: coin_flip.rs  mod.rs
src/commands/inventory/: inventory.rs  item_info.rs  mod.rs  sell.rs
src/commands/setup/: create.rs  mod.rs  setup.rs
src/db/: mod.rs
src/db/schema/: item.rs  mod.rs  users.rs
src/db/schema/item/: generator.rs  inventory_item.rs  mod.rs  rarity.rs
src/db/schema/item/locations/: beach.rs  forest.rs  mod.rs
